--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "expo": "^48.0.21",
+    "expo-checkbox": "~2.3.1",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "jwt-decode": "^3.1.2",
@@ -23,6 +24,7 @@
     "react": "18.2.0",
     "react-native": "0.71.14",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-dropdown-select-list": "^2.0.5",
     "react-native-image-slider-box": "^2.0.7",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-modals": "^0.22.3",
