--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -113,13 +113,13 @@ android {
 
     compileSdkVersion rootProject.ext.compileSdkVersion
 
-    namespace "com.ecommerceproject"
+    namespace 'com.host.exponent'
     defaultConfig {
-        applicationId "com.ecommerceproject"
+        applicationId 'com.host.exponent'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
     }
 
     splits {
