--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
     "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build-apk": "eas build -p android --profile preview"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/datetimepicker": "6.7.3",
     "@react-navigation/bottom-tabs": "^6.5.8",
@@ -15,26 +17,30 @@
     "@react-navigation/native-stack": "^6.9.13",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
-    "expo": "^48.0.21",
+    "expo": "~48.0.21",
     "expo-checkbox": "~2.3.1",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "jwt-decode": "^3.1.2",
-    "lottie-react-native": "5.1.4",
+    "lottie-react-native": "^6.0.1",
     "react": "18.2.0",
+    "react-dom": "^18.3.1",
     "react-native": "0.71.14",
     "react-native-dropdown-picker": "^5.4.6",
-    "react-native-dropdown-select-list": "^2.0.5",
     "react-native-image-slider-box": "^2.0.7",
-    "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-modals": "^0.22.3",
     "react-native-razorpay": "^2.3.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-web": "~0.18.11",
+    "react-native-webview": "11.26.0",
     "react-redux": "^8.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
+  },
+  "android": {
+    "versionCode": 2
   },
   "private": true
 }
