--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "react-dom": "^18.3.1",
     "react-native": "0.71.14",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-dropdown-select-list": "^2.0.5",
     "react-native-image-slider-box": "^2.0.7",
     "react-native-modals": "^0.22.3",
     "react-native-razorpay": "^2.3.0",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-web": "~0.18.11",
