--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "build-apk": "eas build -p android --profile preview"
+    "build-apk": "eas build -p android --profile preview --local"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
@@ -22,8 +22,9 @@
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "jwt-decode": "^3.1.2",
-    "lottie-ios": "^4.5.0",
-    "lottie-react-native": "5.1.4",
+    "lottie-react-native": "^6.0.1",
+    "react-native-dropdown-select-list": "^2.0.5",
+    "react-native-render-html": "^6.3.4",
     "react": "18.2.0",
     "react-dom": "^18.3.1",
     "react-native": "0.71.14",
