--- a/package.json
+++ b/package.json
@@ -19,19 +19,20 @@
     "axios": "^1.4.0",
     "expo": "~48.0.21",
     "expo-checkbox": "~2.3.1",
+    "expo-font": "~11.1.1",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "jwt-decode": "^3.1.2",
     "lottie-react-native": "^6.0.1",
-    "react-native-dropdown-select-list": "^2.0.5",
-    "react-native-render-html": "^6.3.4",
     "react": "18.2.0",
     "react-dom": "^18.3.1",
     "react-native": "0.71.14",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-dropdown-select-list": "^2.0.5",
     "react-native-image-slider-box": "^2.0.7",
     "react-native-modals": "^0.22.3",
     "react-native-razorpay": "^2.3.0",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-web": "~0.18.11",
