--- a/eas.json
+++ b/eas.json
@@ -1,19 +1,23 @@
 {
-    "build": {
-      "preview": {
-        "android": {
-          "buildType": "app-bundle"
-        }
-      },
-      "preview2": {
-        "android": {
-          "gradleCommand": ":app:assembleRelease"
-        }
-      },
-      "preview3": {
+  "build": {
+    "development": {
+      "ios": {
         "developmentClient": true
-      },
-      "production": {}
-    }
+      }
+    },
+    "preview": {
+      "android": {
+        "buildType": "app-bundle"
+      }
+    },
+    "preview2": {
+      "android": {
+        "gradleCommand": ":app:assembleRelease"
+      }
+    },
+    "preview3": {
+      "developmentClient": true
+    },
+    "production": {}
   }
-  
+}
