--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "build-apk": "eas build -p android --profile preview --local"
-
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
@@ -31,6 +30,7 @@
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-image-slider-box": "^2.0.7",
+    "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-modals": "^0.22.3",
     "react-native-razorpay": "^2.3.0",
     "react-native-render-html": "^6.3.4",
