--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "build-apk": "eas build -p android --profile preview --local"
+    "build-android": "eas build -p android --profile preview --local"
 
   },
   "dependencies": {
