--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-font": "~11.1.1",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
+    "expo-updates": "~0.16.4",
     "jwt-decode": "^3.1.2",
     "lottie-react-native": "^6.0.1",
     "react": "18.2.0",
