--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-native-web": "~0.18.11",
     "react-native-webview": "11.26.0",
     "react-redux": "^8.1.1",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
